# python-project-template

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: precommit.yml
